[package]
name = "one-shot-mutex"
version = "0.2.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "One-shot locks that panic instead of (dead)locking on contention."
repository = "https://github.com/mkroening/one-shot-mutex"
license = "MIT OR Apache-2.0"
keywords = ["mutex", "single-thread", "deadlock"]
categories = ["no-std::no-alloc"]

[dependencies]
lock_api = "0.4"
